--- a/build.xml
+++ b/build.xml
@@ -2,7 +2,7 @@
 <project name="tmobile" default="build" basedir=".">
 	<!-- Configure path to GWT SDK -->
 	<property environment="env"/>
-	<property name="gwt.sdk" value="/home/marvin/Documents/eclipse/plugins/com.google.gwt.eclipse.sdkbundle_2.6.0/gwt-2.6.0"/>
+	<property name="gwt.sdk" value="D:\marvin\eclipse\plugins\com.google.gwt.eclipse.sdkbundle_2.6.0\gwt-2.6.0"/>
 	<fail unless="gwt.sdk" message="You must set the GWT_HOME environment variable to point to your GWT SDK"/>
  
 	<path id="project.class.path">
@@ -18,7 +18,9 @@
 	</path>
 
 	<target name="libs" description="Copy libs to WEB-INF/lib">
-		<mkdir dir="war/WEB-INF/lib" />
+	    <copy todir="war/WEB-INF/">
+		    <fileset dir="lib"/>
+		  </copy>
 		<copy todir="war/WEB-INF/lib" file="${gwt.sdk}/gwt-servlet.jar" />
 		<copy todir="war/images/">
 		    <fileset dir="images"/>
@@ -84,6 +86,7 @@
 		
 		  <delete file="war/TMobile.html"/>
 		  <delete file="war/TMobile.css"/>
+		  <delete file="TMobile.war"/>
 	</target>
 
 </project>
