--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -18,6 +18,17 @@
   
   
    <servlet>
+    <servlet-name>AuditService</servlet-name>
+    <servlet-class>com.emerge.TMobile.server.AuditServiceImpl</servlet-class>
+  </servlet>
+  
+  <servlet-mapping>
+    <servlet-name>AuditService</servlet-name>
+    <url-pattern>/tmobile/audit</url-pattern>
+  </servlet-mapping>
+  
+  
+   <servlet>
     <servlet-name>uploadVisServlet</servlet-name>
     <servlet-class>com.emerge.TMobile.server.servlets.UploadVisFileServlet</servlet-class>
   </servlet>
@@ -26,8 +37,6 @@
     <servlet-name>uploadVisServlet</servlet-name>
     <url-pattern>/tmobile/uploadVisServlet</url-pattern>
   </servlet-mapping>
-  
-  
   
   <servlet>
     <servlet-name>uploadVrhServlet</servlet-name>
