--- a/build.xml
+++ b/build.xml
@@ -2,7 +2,7 @@
 <project name="tmobile" default="build" basedir=".">
 	<!-- Configure path to GWT SDK -->
 	<property environment="env"/>
-	<property name="gwt.sdk" value="/home/marvin/Documents/eclipse/plugins/com.google.gwt.eclipse.sdkbundle_2.6.0/gwt-2.6.0"/>
+	<property name="gwt.sdk" value="GWT/gwt-2.6.0"/>
 	<fail unless="gwt.sdk" message="You must set the GWT_HOME environment variable to point to your GWT SDK"/>
  
 	<path id="project.class.path">
